product_docs/docs/postgis/3.2/01a_installing_postgis/installing_on_linux/x86_amd64/postgis_rhel7_x86.mdx
---
navTitle: RHEL 7 or OL 7
title: Installing PostGIS on RHEL 7 or OL 7 x86_64
---

Before you begin the installation process, log in as superuser.

```shell
# To log in as a superuser:
sudo su -
```

## Set up the repository

Setting up the repository is a one-time task. If you have already set up your repository, you do not need to perform this step. If you do need to set up the repository, you must register with EDB. To receive credentials for the EDB repository, visit: [Repository Access Request](https://www.enterprisedb.com/repository-access-request).

```shell
#  Set up the EDB repository:
yum -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm

#  Replace '<USERNAME>' and '<PASSWORD>' below with
#  your username and password for the EDB repository:
sed -i "s@<username>:<password>@USERNAME:PASSWORD@" /etc/yum.repos.d/edb.repo

#  Install the EPEL repository:
yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm

# Enable additional repositories to resolve dependencies:
subscription-manager repos --enable "rhel-*-optional-rpms" --enable "rhel-*-extras-rpms"  --enable "rhel-ha-for-rhel-*-server-rpms"
```

## Install the package

```shell
dnf -y install edb-as14-postgis3
```

4.  Before installing PostGIS, you need to install the Extra Packages for Enterprise Linux (EPEL) release package:

    ```text
    yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
    ```

5.  On RHEL 7, enable the `optional, extras`, and `HA` repositories to satisfy package dependencies:

    ```text
    subscription-manager repos --enable "rhel-*-optional-rpms" --enable "rhel-*-extras-rpms"  --enable "rhel-ha-for-rhel-*-server-rpms"
    ```

6.  Invoke the following command to install PostGIS:

    To install the latest version of PostGIS version for EDB Advanced Server version 14.0:

    ```text
    yum -y install edb-as14-postgis32
    ```

    To install the latest version of PostGIS 3.1 for EDB Advanced Server version older than 13.0:

    ```text
    yum -y install edb-as<xx>-postgis
    ```

    where &lt;xx> denotes the Advanced Server version older than 14.0.
    
    To install PostGIS older versions (for example PostGIS 3.0.2) for EDB Advanced Server version 14.0:

    ```text
    yum -y install edb-as14-postgis3-3.0.2
    ```

    To install older PostGIS versions for EDB Advanced Server versions older than 14.0:

    ```text
    yum -y install edb-as<xx>-postgis-<y.y.y>
    ```

    where &lt;xx> is the Advanced Server version older than 14.0 and &lt;y.y.y> is the older PostGIS version.
    
    For example, to install PostGIS 2.5.4 on EDB Advanced Server version 12:

    ```text
    yum -y install edb-as12-postgis-2.5.4
    ```

    When you install an RPM package signed by a source that is not recognized by your system, yum may ask for your permission to import the key to your local server. If prompted, and you are satisfied that the packages come from a trustworthy source, enter `y` and press `Return` to continue.

    !!! Note
        After installing PostGIS with a package manager, you must manually create a template database and the required PostGIS extension.
